understand the calculator

--- a/Projects/1 Calculator/calculator.html
+++ b/Projects/1 Calculator/calculator.html
@@ -8,10 +8,10 @@
   <div id="calculator">
     <input type="text" id="display" readonly>
     <div class="button-container">
-      <button class="button"onclick="
+      <button class="button" onclick="
       currentDisplay = '';
-      document.querySelector('#display').value = currentDisplay;
-      ">c</button>
+      document.querySelector('#display').value = currentDisplay;"
+      >c</button>
       <button class="button" onclick="
       currentDisplay = currentDisplay + '1';
       document.querySelector('#display').value = currentDisplay;
@@ -81,8 +81,8 @@
     </div>
   </div>
   <script>
-    let currentDisplay = '';
-    document.querySelector('#display').value = currentDisplay;
+    let currentDisplay = '' ;
+    // document.querySelector('#display').value = currentDisplay;
 
   </script>
 
